fix filter fonts, add scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,8 @@ html {
   /* fonts */
   --fontFamilyHeading: "Lato", sans-serif;
   --fontFamilyBody: "Arvo", serif;
-  --fontSizeTextSmall: 0.7em;
+  --fontSizeTextSmall: 0.875em;
+  --fontSizeTextExtraSmall: 0.7em;
 
   /* shadows*/
   --shadow-s: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
@@ -94,21 +95,26 @@ html {
 ###  GLOBAL STYLES  ###
 */
 
-:root::-webkit-scrollbar {
-  width: 0.7em;
+:root::-webkit-scrollbar,
+.scroll::-webkit-scrollbar {
+  width: 0.7rem;
 }
-:root::-webkit-scrollbar-track {
+:root::-webkit-scrollbar-track,
+.scroll::-webkit-scrollbar-track {
   background: var(--primary-100);
 }
-:root::-webkit-scrollbar-thumb {
+:root::-webkit-scrollbar-thumb,
+.scroll::-webkit-scrollbar-thumb {
   background: var(--primary-200);
   border-radius: var(--borderRadius);
   border: 1px solid var(--primary-100);
 }
-:root::-webkit-scrollbar-thumb:hover {
+:root::-webkit-scrollbar-thumb:hover,
+.scroll::-webkit-scrollbar-thumb:hover {
   background: var(--primary-300);
 }
-:root::-webkit-scrollbar-thumb:active {
+:root::-webkit-scrollbar-thumb:active,
+.scroll::-webkit-scrollbar-thumb:active {
   background: var(--primary-400);
 }
 
